--- a/practical_example_to_understand_RDEPENDS/dirs/conf/local.conf
+++ b/practical_example_to_understand_RDEPENDS/dirs/conf/local.conf
@@ -289,6 +289,10 @@ IMAGE_INSTALL:append = " git python3"
 # add new packages to the image. NOTE: these packages were downloaded separately from poky
 IMAGE_INSTALL:append = " nano"
 
+# add new package to demonstrate the use of RDEPENDS
+IMAGE_INSTALL:append = " rdepends-example"
+
+
 # BitBake *the build engine of Yocto) uses screen terminal emulator when it needs to run interactive commands during bitbake commands
 # for instance when 'bitbake -c devshell <recipe>'
 OE_TERMINAL = "screen"
